versions/0.9.0/_sources/refs/_aws-cdk_aws-autoscaling.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"r87qrr4c4Ls8KJmMoHlBldsnIiG9Qmi/BecOmjn7mEg="}

@aws-cdk/aws-autoscaling
========================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AutoScaling/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AutoScaling" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AutoScaling --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AutoScaling" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/autoscaling/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:autoscaling:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="autoscaling" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>autoscaling</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:autoscaling:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='autoscaling', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscaling/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscaling@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscaling": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscaling@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscaling/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscaling@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscaling": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscaling@0.9.0



.. mdinclude:: ./__aws-cdk_aws-autoscaling.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-autoscaling

AutoScalingGroup
^^^^^^^^^^^^^^^^

.. py:class:: AutoScalingGroup(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.AutoScalingGroup;

      .. code-tab:: javascript

         const { AutoScalingGroup } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { AutoScalingGroup } from '@aws-cdk/aws-autoscaling';



   A Fleet represents a managed set of EC2 instances  The Fleet models a number of AutoScalingGroups, a launch configuration, a security group and an instance role.  It allows adding arbitrary commands to the startup scripts of the instances in the fleet.  The ASG spans all availability zones.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-ec2.IClassicLoadBalancerTarget`
   :implements: :py:class:`@aws-cdk/aws-ec2.IConnectable`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-autoscaling.AutoScalingGroupProps`

   .. py:method:: addSecurityGroup(securityGroup)

      Add the security group to all instances via the launch configuration security groups array.


      :param securityGroup: : The SecurityGroupRef to add
      :type securityGroup: :py:class:`@aws-cdk/aws-ec2.SecurityGroupRef`


   .. py:method:: addToRolePolicy(statement)

      Adds a statement to the IAM role assumed by instances of this fleet.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: addUserData(script)

      Add command to the startup script of fleet instances. The command must be in the scripting language supported by the fleet's OS (i.e. Linux/Windows).


      :param script: 
      :type script: string


   .. py:method:: attachToClassicLB(loadBalancer)

      Attach load-balanced target to a classic ELB


      :param loadBalancer: 
      :type loadBalancer: :py:class:`@aws-cdk/aws-ec2.ClassicLoadBalancer`


   .. py:method:: autoScalingGroupName() -> @aws-cdk/aws-autoscaling.AutoScalingGroupName

      :rtype: :py:class:`~@aws-cdk/aws-autoscaling.AutoScalingGroupName`


   .. py:attribute:: connections

      Allows specify security group connections for instances of this fleet.


      :type: :py:class:`@aws-cdk/aws-ec2.Connections` *(readonly)*


   .. py:attribute:: osType

      The type of OS instances of this fleet are running.


      :type: :py:class:`@aws-cdk/aws-ec2.OperatingSystemType` *(readonly)*


   .. py:attribute:: role

      The IAM role assumed by instances of this fleet.


      :type: :py:class:`@aws-cdk/aws-iam.Role` *(readonly)*


AutoScalingGroupName
^^^^^^^^^^^^^^^^^^^^

.. py:class:: AutoScalingGroupName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.AutoScalingGroupName;

      .. code-tab:: javascript

         const { AutoScalingGroupName } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { AutoScalingGroupName } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

AutoScalingGroupProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AutoScalingGroupProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.AutoScalingGroupProps;

      .. code-tab:: javascript

         // AutoScalingGroupProps is an interface

      .. code-tab:: typescript

         import { AutoScalingGroupProps } from '@aws-cdk/aws-autoscaling';



   Properties of a Fleet




   .. py:attribute:: instanceType

      Type of instance to launch


      :type: :py:class:`@aws-cdk/aws-ec2.InstanceType`


   .. py:attribute:: machineImage

      AMI to launch


      :type: :py:class:`@aws-cdk/aws-ec2.IMachineImageSource`


   .. py:attribute:: vpc

      VPC to launch these instances in.


      :type: :py:class:`@aws-cdk/aws-ec2.VpcNetworkRef`


   .. py:attribute:: allowAllOutbound

      Whether the instances can initiate connections to anywhere by default


      :type: boolean or undefined


   .. py:attribute:: desiredCapacity

      Initial amount of instances in the fleet


      :type: number or undefined


   .. py:attribute:: ignoreUnmodifiedSizeProperties

      If the ASG has scheduled actions, don't reset unchanged group sizes  Only used if the ASG has scheduled actions (which may scale your ASG up or down regardless of cdk deployments). If true, the size of the group will only be reset if it has been changed in the CDK app. If false, the sizes will always be changed back to what they were in the CDK app on deployment.


      :type: boolean or undefined


   .. py:attribute:: keyName

      Name of SSH keypair to grant access to instances


      :type: string or undefined


   .. py:attribute:: maxSize

      Maximum number of instances in the fleet


      :type: number or undefined


   .. py:attribute:: minSize

      Minimum number of instances in the fleet


      :type: number or undefined


   .. py:attribute:: notificationsTopic

      SNS topic to send notifications about fleet changes


      :type: :py:class:`@aws-cdk/aws-sns.TopicRef` or undefined


   .. py:attribute:: replacingUpdateMinSuccessfulInstancesPercent

      Configuration for replacing updates.  Only used if updateType == UpdateType.ReplacingUpdate. Specifies how many instances must signal success for the update to succeed.


      :type: number or undefined


   .. py:attribute:: resourceSignalCount

      How many ResourceSignal calls CloudFormation expects before the resource is considered created


      :type: number or undefined


   .. py:attribute:: resourceSignalTimeoutSec

      The length of time to wait for the resourceSignalCount  The maximum value is 43200 (12 hours).


      :type: number or undefined


   .. py:attribute:: rollingUpdateConfiguration

      Configuration for rolling updates  Only used if updateType == UpdateType.RollingUpdate.


      :type: :py:class:`~@aws-cdk/aws-autoscaling.RollingUpdateConfiguration` or undefined


   .. py:attribute:: updateType

      What to do when an AutoScalingGroup's instance configuration is changed  This is applied when any of the settings on the ASG are changed that affect how the instances should be created (VPC, instance type, startup scripts, etc.). It indicates how the existing instances should be replaced with new instances matching the new config. By default, nothing is done and only new instances are launched with the new config.


      :type: :py:class:`~@aws-cdk/aws-autoscaling.UpdateType` or undefined


   .. py:attribute:: vpcPlacement

      Where to place instances within the VPC


      :type: :py:class:`@aws-cdk/aws-ec2.VpcPlacementStrategy` or undefined


LaunchConfigurationName
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LaunchConfigurationName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.LaunchConfigurationName;

      .. code-tab:: javascript

         const { LaunchConfigurationName } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { LaunchConfigurationName } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LifecycleHookName
^^^^^^^^^^^^^^^^^

.. py:class:: LifecycleHookName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.LifecycleHookName;

      .. code-tab:: javascript

         const { LifecycleHookName } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { LifecycleHookName } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

RollingUpdateConfiguration (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: RollingUpdateConfiguration

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.RollingUpdateConfiguration;

      .. code-tab:: javascript

         // RollingUpdateConfiguration is an interface

      .. code-tab:: typescript

         import { RollingUpdateConfiguration } from '@aws-cdk/aws-autoscaling';



   Additional settings when a rolling update is selected




   .. py:attribute:: maxBatchSize

      The maximum number of instances that AWS CloudFormation updates at once.


      :type: number or undefined


   .. py:attribute:: minInstancesInService

      The minimum number of instances that must be in service before more instances are replaced.  This number affects the speed of the replacement.


      :type: number or undefined


   .. py:attribute:: minSuccessfulInstancesPercent

      The percentage of instances that must signal success for an update to succeed.  If an instance doesn't send a signal within the time specified in the pauseTime property, AWS CloudFormation assumes that the instance wasn't updated.  This number affects the success of the replacement.  If you specify this property, you must also enable the waitOnResourceSignals and pauseTime properties.


      :type: number or undefined


   .. py:attribute:: pauseTimeSec

      The pause time after making a change to a batch of instances.  This is intended to give those instances time to start software applications.  Specify PauseTime in the ISO8601 duration format (in the format PT#H#M#S, where each # is the number of hours, minutes, and seconds, respectively). The maximum PauseTime is one hour (PT1H).


      :type: number or undefined


   .. py:attribute:: suspendProcesses

      Specifies the Auto Scaling processes to suspend during a stack update.  Suspending processes prevents Auto Scaling from interfering with a stack update.


      :type: :py:class:`~@aws-cdk/aws-autoscaling.ScalingProcess`[] or undefined


   .. py:attribute:: waitOnResourceSignals

      Specifies whether the Auto Scaling group waits on signals from new instances during an update.  AWS CloudFormation must receive a signal from each new instance within the specified PauseTime before continuing the update.  To have instances wait for an Elastic Load Balancing health check before they signal success, add a health-check verification by using the cfn-init helper script. For an example, see the verify_instance_health command in the Auto Scaling rolling updates sample template.


      :type: boolean or undefined


ScalingPolicyArn
^^^^^^^^^^^^^^^^

.. py:class:: ScalingPolicyArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.ScalingPolicyArn;

      .. code-tab:: javascript

         const { ScalingPolicyArn } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { ScalingPolicyArn } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ScalingProcess (enum)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ScalingProcess

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.ScalingProcess;

      .. code-tab:: javascript

         const { ScalingProcess } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { ScalingProcess } from '@aws-cdk/aws-autoscaling';



   .. py:data:: Launch

   .. py:data:: Terminate

   .. py:data:: HealthCheck

   .. py:data:: ReplaceUnhealthy

   .. py:data:: AZRebalance

   .. py:data:: AlarmNotification

   .. py:data:: ScheduledActions

   .. py:data:: AddToLoadBalancer


ScheduledActionName
^^^^^^^^^^^^^^^^^^^

.. py:class:: ScheduledActionName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.ScheduledActionName;

      .. code-tab:: javascript

         const { ScheduledActionName } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { ScheduledActionName } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

UpdateType (enum)
^^^^^^^^^^^^^^^^^

.. py:class:: UpdateType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.UpdateType;

      .. code-tab:: javascript

         const { UpdateType } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { UpdateType } from '@aws-cdk/aws-autoscaling';



   The type of update to perform on instances in this AutoScalingGroup


   .. py:data:: None

   Don't do anything


   .. py:data:: ReplacingUpdate

   Replace the entire AutoScalingGroup  Builds a new AutoScalingGroup first, then delete the old one.


   .. py:data:: RollingUpdate

   Replace the instances in the AutoScalingGroup.




cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-autoscaling.cloudformation

AutoScalingGroupResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AutoScalingGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.AutoScalingGroupResource;

      .. code-tab:: javascript

         const { cloudformation.AutoScalingGroupResource } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { cloudformation.AutoScalingGroupResource } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AutoScalingGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AutoScalingGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.AutoScalingGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-autoscaling.AutoScalingGroupName` *(readonly)*

   .. py:class:: LifecycleHookSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.AutoScalingGroupResource.LifecycleHookSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.AutoScalingGroupResource.LifecycleHookSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AutoScalingGroupResource.LifecycleHookSpecificationProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: lifecycleHookName

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.LifecycleHookName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-lifecyclehookname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: lifecycleTransition

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.LifecycleTransition``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-lifecycletransition


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: defaultResult

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.DefaultResult``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-defaultresult


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: heartbeatTimeout

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.HeartbeatTimeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-heartbeattimeout


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: notificationMetadata

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.NotificationMetadata``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-notificationmetadata


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: notificationTargetArn

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.NotificationTargetARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-notificationtargetarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: roleArn

         ``AutoScalingGroupResource.LifecycleHookSpecificationProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-autoscalinggroup-lifecyclehookspecification.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecification-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: MetricsCollectionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.AutoScalingGroupResource.MetricsCollectionProperty;

         .. code-tab:: javascript

            // cloudformation.AutoScalingGroupResource.MetricsCollectionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AutoScalingGroupResource.MetricsCollectionProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: granularity

         ``AutoScalingGroupResource.MetricsCollectionProperty.Granularity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-metricscollection.html#cfn-as-metricscollection-granularity


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: metrics

         ``AutoScalingGroupResource.MetricsCollectionProperty.Metrics``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-metricscollection.html#cfn-as-metricscollection-metrics


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: NotificationConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.AutoScalingGroupResource.NotificationConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.AutoScalingGroupResource.NotificationConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AutoScalingGroupResource.NotificationConfigurationProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: topicArn

         ``AutoScalingGroupResource.NotificationConfigurationProperty.TopicARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-notificationconfigurations.html#cfn-autoscaling-autoscalinggroup-notificationconfigurations-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: notificationTypes

         ``AutoScalingGroupResource.NotificationConfigurationProperty.NotificationTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-notificationconfigurations.html#cfn-as-group-notificationconfigurations-notificationtypes


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: TagPropertyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.AutoScalingGroupResource.TagPropertyProperty;

         .. code-tab:: javascript

            // cloudformation.AutoScalingGroupResource.TagPropertyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AutoScalingGroupResource.TagPropertyProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: key

         ``AutoScalingGroupResource.TagPropertyProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-tags.html#cfn-as-tags-Key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: propagateAtLaunch

         ``AutoScalingGroupResource.TagPropertyProperty.PropagateAtLaunch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-tags.html#cfn-as-tags-PropagateAtLaunch


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: value

         ``AutoScalingGroupResource.TagPropertyProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-tags.html#cfn-as-tags-Value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



AutoScalingGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AutoScalingGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.AutoScalingGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.AutoScalingGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AutoScalingGroupResourceProps } from '@aws-cdk/aws-autoscaling';





   .. py:attribute:: maxSize

      ``AWS::AutoScaling::AutoScalingGroup.MaxSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-maxsize


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: minSize

      ``AWS::AutoScaling::AutoScalingGroup.MinSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-minsize


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: autoScalingGroupName

      ``AWS::AutoScaling::AutoScalingGroup.AutoScalingGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-autoscaling-autoscalinggroup-autoscalinggroupname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: availabilityZones

      ``AWS::AutoScaling::AutoScalingGroup.AvailabilityZones``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-availabilityzones


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: cooldown

      ``AWS::AutoScaling::AutoScalingGroup.Cooldown``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-cooldown


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: desiredCapacity

      ``AWS::AutoScaling::AutoScalingGroup.DesiredCapacity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-desiredcapacity


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheckGracePeriod

      ``AWS::AutoScaling::AutoScalingGroup.HealthCheckGracePeriod``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-healthcheckgraceperiod


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheckType

      ``AWS::AutoScaling::AutoScalingGroup.HealthCheckType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-healthchecktype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: instanceId

      ``AWS::AutoScaling::AutoScalingGroup.InstanceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-instanceid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: launchConfigurationName

      ``AWS::AutoScaling::AutoScalingGroup.LaunchConfigurationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-launchconfigurationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: lifecycleHookSpecificationList

      ``AWS::AutoScaling::AutoScalingGroup.LifecycleHookSpecificationList``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-autoscaling-autoscalinggroup-lifecyclehookspecificationlist


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.AutoScalingGroupResource.LifecycleHookSpecificationProperty`)[] or undefined


   .. py:attribute:: loadBalancerNames

      ``AWS::AutoScaling::AutoScalingGroup.LoadBalancerNames``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-loadbalancernames


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: metricsCollection

      ``AWS::AutoScaling::AutoScalingGroup.MetricsCollection``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-metricscollection


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.AutoScalingGroupResource.MetricsCollectionProperty`)[] or undefined


   .. py:attribute:: notificationConfigurations

      ``AWS::AutoScaling::AutoScalingGroup.NotificationConfigurations``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-notificationconfigurations


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.AutoScalingGroupResource.NotificationConfigurationProperty`)[] or undefined


   .. py:attribute:: placementGroup

      ``AWS::AutoScaling::AutoScalingGroup.PlacementGroup``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-placementgroup


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: serviceLinkedRoleArn

      ``AWS::AutoScaling::AutoScalingGroup.ServiceLinkedRoleARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-autoscaling-autoscalinggroup-servicelinkedrolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: tags

      ``AWS::AutoScaling::AutoScalingGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.AutoScalingGroupResource.TagPropertyProperty`)[] or undefined


   .. py:attribute:: targetGroupArns

      ``AWS::AutoScaling::AutoScalingGroup.TargetGroupARNs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-targetgrouparns


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: terminationPolicies

      ``AWS::AutoScaling::AutoScalingGroup.TerminationPolicies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-termpolicy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: vpcZoneIdentifier

      ``AWS::AutoScaling::AutoScalingGroup.VPCZoneIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-group.html#cfn-as-group-vpczoneidentifier


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


LaunchConfigurationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchConfigurationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.LaunchConfigurationResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchConfigurationResource } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { cloudformation.LaunchConfigurationResource } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchConfigurationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchConfigurationResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.LaunchConfigurationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-autoscaling.LaunchConfigurationName` *(readonly)*

   .. py:class:: BlockDeviceMappingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.LaunchConfigurationResource.BlockDeviceMappingProperty;

         .. code-tab:: javascript

            // cloudformation.LaunchConfigurationResource.BlockDeviceMappingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LaunchConfigurationResource.BlockDeviceMappingProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: deviceName

         ``LaunchConfigurationResource.BlockDeviceMappingProperty.DeviceName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-mapping.html#cfn-as-launchconfig-blockdev-mapping-devicename


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: ebs

         ``LaunchConfigurationResource.BlockDeviceMappingProperty.Ebs``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-mapping.html#cfn-as-launchconfig-blockdev-mapping-ebs


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.LaunchConfigurationResource.BlockDeviceProperty` or undefined


      .. py:attribute:: noDevice

         ``LaunchConfigurationResource.BlockDeviceMappingProperty.NoDevice``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-mapping.html#cfn-as-launchconfig-blockdev-mapping-nodevice


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: virtualName

         ``LaunchConfigurationResource.BlockDeviceMappingProperty.VirtualName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-mapping.html#cfn-as-launchconfig-blockdev-mapping-virtualname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: BlockDeviceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.LaunchConfigurationResource.BlockDeviceProperty;

         .. code-tab:: javascript

            // cloudformation.LaunchConfigurationResource.BlockDeviceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LaunchConfigurationResource.BlockDeviceProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: deleteOnTermination

         ``LaunchConfigurationResource.BlockDeviceProperty.DeleteOnTermination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-template.html#cfn-as-launchconfig-blockdev-template-deleteonterm


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: encrypted

         ``LaunchConfigurationResource.BlockDeviceProperty.Encrypted``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-template.html#cfn-as-launchconfig-blockdev-template-encrypted


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: iops

         ``LaunchConfigurationResource.BlockDeviceProperty.Iops``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-template.html#cfn-as-launchconfig-blockdev-template-iops


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: snapshotId

         ``LaunchConfigurationResource.BlockDeviceProperty.SnapshotId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-template.html#cfn-as-launchconfig-blockdev-template-snapshotid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: volumeSize

         ``LaunchConfigurationResource.BlockDeviceProperty.VolumeSize``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-template.html#cfn-as-launchconfig-blockdev-template-volumesize


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: volumeType

         ``LaunchConfigurationResource.BlockDeviceProperty.VolumeType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig-blockdev-template.html#cfn-as-launchconfig-blockdev-template-volumetype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



LaunchConfigurationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchConfigurationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.LaunchConfigurationResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchConfigurationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchConfigurationResourceProps } from '@aws-cdk/aws-autoscaling';





   .. py:attribute:: imageId

      ``AWS::AutoScaling::LaunchConfiguration.ImageId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-imageid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: instanceType

      ``AWS::AutoScaling::LaunchConfiguration.InstanceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-instancetype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: associatePublicIpAddress

      ``AWS::AutoScaling::LaunchConfiguration.AssociatePublicIpAddress``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cf-as-launchconfig-associatepubip


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: blockDeviceMappings

      ``AWS::AutoScaling::LaunchConfiguration.BlockDeviceMappings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-blockdevicemappings


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.LaunchConfigurationResource.BlockDeviceMappingProperty`)[] or undefined


   .. py:attribute:: classicLinkVpcId

      ``AWS::AutoScaling::LaunchConfiguration.ClassicLinkVPCId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-classiclinkvpcid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: classicLinkVpcSecurityGroups

      ``AWS::AutoScaling::LaunchConfiguration.ClassicLinkVPCSecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-classiclinkvpcsecuritygroups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: ebsOptimized

      ``AWS::AutoScaling::LaunchConfiguration.EbsOptimized``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-ebsoptimized


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: iamInstanceProfile

      ``AWS::AutoScaling::LaunchConfiguration.IamInstanceProfile``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-iaminstanceprofile


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: instanceId

      ``AWS::AutoScaling::LaunchConfiguration.InstanceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-instanceid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: instanceMonitoring

      ``AWS::AutoScaling::LaunchConfiguration.InstanceMonitoring``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-instancemonitoring


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: kernelId

      ``AWS::AutoScaling::LaunchConfiguration.KernelId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-kernelid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: keyName

      ``AWS::AutoScaling::LaunchConfiguration.KeyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-keyname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: launchConfigurationName

      ``AWS::AutoScaling::LaunchConfiguration.LaunchConfigurationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-autoscaling-launchconfig-launchconfigurationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: placementTenancy

      ``AWS::AutoScaling::LaunchConfiguration.PlacementTenancy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-placementtenancy


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: ramDiskId

      ``AWS::AutoScaling::LaunchConfiguration.RamDiskId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-ramdiskid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: securityGroups

      ``AWS::AutoScaling::LaunchConfiguration.SecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-securitygroups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: spotPrice

      ``AWS::AutoScaling::LaunchConfiguration.SpotPrice``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-spotprice


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: userData

      ``AWS::AutoScaling::LaunchConfiguration.UserData``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-launchconfig.html#cfn-as-launchconfig-userdata


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


LifecycleHookResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LifecycleHookResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.LifecycleHookResource;

      .. code-tab:: javascript

         const { cloudformation.LifecycleHookResource } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { cloudformation.LifecycleHookResource } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LifecycleHookResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LifecycleHookResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.LifecycleHookResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-autoscaling.LifecycleHookName` *(readonly)*


LifecycleHookResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LifecycleHookResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.LifecycleHookResourceProps;

      .. code-tab:: javascript

         // cloudformation.LifecycleHookResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LifecycleHookResourceProps } from '@aws-cdk/aws-autoscaling';





   .. py:attribute:: autoScalingGroupName

      ``AWS::AutoScaling::LifecycleHook.AutoScalingGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-autoscalinggroupname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: lifecycleTransition

      ``AWS::AutoScaling::LifecycleHook.LifecycleTransition``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-lifecycletransition


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: defaultResult

      ``AWS::AutoScaling::LifecycleHook.DefaultResult``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-defaultresult


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: heartbeatTimeout

      ``AWS::AutoScaling::LifecycleHook.HeartbeatTimeout``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-heartbeattimeout


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: lifecycleHookName

      ``AWS::AutoScaling::LifecycleHook.LifecycleHookName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-autoscaling-lifecyclehook-lifecyclehookname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: notificationMetadata

      ``AWS::AutoScaling::LifecycleHook.NotificationMetadata``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-notificationmetadata


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: notificationTargetArn

      ``AWS::AutoScaling::LifecycleHook.NotificationTargetARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-notificationtargetarn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: roleArn

      ``AWS::AutoScaling::LifecycleHook.RoleARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-lifecyclehook.html#cfn-as-lifecyclehook-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


ScalingPolicyResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPolicyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResource;

      .. code-tab:: javascript

         const { cloudformation.ScalingPolicyResource } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { cloudformation.ScalingPolicyResource } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ScalingPolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScalingPolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScalingPolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-autoscaling.ScalingPolicyArn` *(readonly)*

   .. py:class:: CustomizedMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: metricName

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.MetricName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-customizedmetricspecification.html#cfn-autoscaling-scalingpolicy-customizedmetricspecification-metricname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: namespace

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-customizedmetricspecification.html#cfn-autoscaling-scalingpolicy-customizedmetricspecification-namespace


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: statistic

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Statistic``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-customizedmetricspecification.html#cfn-autoscaling-scalingpolicy-customizedmetricspecification-statistic


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: dimensions

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Dimensions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-customizedmetricspecification.html#cfn-autoscaling-scalingpolicy-customizedmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScalingPolicyResource.MetricDimensionProperty`)[] or undefined


      .. py:attribute:: unit

         ``ScalingPolicyResource.CustomizedMetricSpecificationProperty.Unit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-customizedmetricspecification.html#cfn-autoscaling-scalingpolicy-customizedmetricspecification-unit


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: MetricDimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResource.MetricDimensionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.MetricDimensionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.MetricDimensionProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: name

         ``ScalingPolicyResource.MetricDimensionProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-metricdimension.html#cfn-autoscaling-scalingpolicy-metricdimension-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: value

         ``ScalingPolicyResource.MetricDimensionProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-metricdimension.html#cfn-autoscaling-scalingpolicy-metricdimension-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: PredefinedMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: predefinedMetricType

         ``ScalingPolicyResource.PredefinedMetricSpecificationProperty.PredefinedMetricType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-predefinedmetricspecification.html#cfn-autoscaling-scalingpolicy-predefinedmetricspecification-predefinedmetrictype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: resourceLabel

         ``ScalingPolicyResource.PredefinedMetricSpecificationProperty.ResourceLabel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-predefinedmetricspecification.html#cfn-autoscaling-scalingpolicy-predefinedmetricspecification-resourcelabel


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: StepAdjustmentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResource.StepAdjustmentProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.StepAdjustmentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.StepAdjustmentProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: scalingAdjustment

         ``ScalingPolicyResource.StepAdjustmentProperty.ScalingAdjustment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-stepadjustments.html#cfn-autoscaling-scalingpolicy-stepadjustment-scalingadjustment


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: metricIntervalLowerBound

         ``ScalingPolicyResource.StepAdjustmentProperty.MetricIntervalLowerBound``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-stepadjustments.html#cfn-autoscaling-scalingpolicy-stepadjustment-metricintervallowerbound


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: metricIntervalUpperBound

         ``ScalingPolicyResource.StepAdjustmentProperty.MetricIntervalUpperBound``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-stepadjustments.html#cfn-autoscaling-scalingpolicy-stepadjustment-metricintervalupperbound


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TargetTrackingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScaling;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResource.TargetTrackingConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPolicyResource.TargetTrackingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPolicyResource.TargetTrackingConfigurationProperty } from '@aws-cdk/aws-autoscaling';





      .. py:attribute:: targetValue

         ``ScalingPolicyResource.TargetTrackingConfigurationProperty.TargetValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-targettrackingconfiguration.html#cfn-autoscaling-scalingpolicy-targettrackingconfiguration-targetvalue


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: customizedMetricSpecification

         ``ScalingPolicyResource.TargetTrackingConfigurationProperty.CustomizedMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-targettrackingconfiguration.html#cfn-autoscaling-scalingpolicy-targettrackingconfiguration-customizedmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScalingPolicyResource.CustomizedMetricSpecificationProperty` or undefined


      .. py:attribute:: disableScaleIn

         ``ScalingPolicyResource.TargetTrackingConfigurationProperty.DisableScaleIn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-targettrackingconfiguration.html#cfn-autoscaling-scalingpolicy-targettrackingconfiguration-disablescalein


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: predefinedMetricSpecification

         ``ScalingPolicyResource.TargetTrackingConfigurationProperty.PredefinedMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscaling-scalingpolicy-targettrackingconfiguration.html#cfn-autoscaling-scalingpolicy-targettrackingconfiguration-predefinedmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScalingPolicyResource.PredefinedMetricSpecificationProperty` or undefined



ScalingPolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPolicyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.ScalingPolicyResourceProps;

      .. code-tab:: javascript

         // cloudformation.ScalingPolicyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ScalingPolicyResourceProps } from '@aws-cdk/aws-autoscaling';





   .. py:attribute:: autoScalingGroupName

      ``AWS::AutoScaling::ScalingPolicy.AutoScalingGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-autoscalinggroupname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: adjustmentType

      ``AWS::AutoScaling::ScalingPolicy.AdjustmentType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-adjustmenttype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: cooldown

      ``AWS::AutoScaling::ScalingPolicy.Cooldown``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-cooldown


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: estimatedInstanceWarmup

      ``AWS::AutoScaling::ScalingPolicy.EstimatedInstanceWarmup``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-estimatedinstancewarmup


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: metricAggregationType

      ``AWS::AutoScaling::ScalingPolicy.MetricAggregationType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-metricaggregationtype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: minAdjustmentMagnitude

      ``AWS::AutoScaling::ScalingPolicy.MinAdjustmentMagnitude``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-minadjustmentmagnitude


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: policyType

      ``AWS::AutoScaling::ScalingPolicy.PolicyType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-policytype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: scalingAdjustment

      ``AWS::AutoScaling::ScalingPolicy.ScalingAdjustment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-scalingadjustment


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: stepAdjustments

      ``AWS::AutoScaling::ScalingPolicy.StepAdjustments``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-as-scalingpolicy-stepadjustments


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScalingPolicyResource.StepAdjustmentProperty`)[] or undefined


   .. py:attribute:: targetTrackingConfiguration

      ``AWS::AutoScaling::ScalingPolicy.TargetTrackingConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-as-policy.html#cfn-autoscaling-scalingpolicy-targettrackingconfiguration


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScalingPolicyResource.TargetTrackingConfigurationProperty` or undefined


ScheduledActionResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScheduledActionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.ScheduledActionResource;

      .. code-tab:: javascript

         const { cloudformation.ScheduledActionResource } = require('@aws-cdk/aws-autoscaling');

      .. code-tab:: typescript

         import { cloudformation.ScheduledActionResource } from '@aws-cdk/aws-autoscaling';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ScheduledActionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScheduledActionResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscaling.cloudformation.ScheduledActionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-autoscaling.ScheduledActionName` *(readonly)*


ScheduledActionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScheduledActionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScaling;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscaling.cloudformation.ScheduledActionResourceProps;

      .. code-tab:: javascript

         // cloudformation.ScheduledActionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ScheduledActionResourceProps } from '@aws-cdk/aws-autoscaling';





   .. py:attribute:: autoScalingGroupName

      ``AWS::AutoScaling::ScheduledAction.AutoScalingGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-asgname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: desiredCapacity

      ``AWS::AutoScaling::ScheduledAction.DesiredCapacity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-desiredcapacity


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: endTime

      ``AWS::AutoScaling::ScheduledAction.EndTime``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-endtime


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: maxSize

      ``AWS::AutoScaling::ScheduledAction.MaxSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-maxsize


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: minSize

      ``AWS::AutoScaling::ScheduledAction.MinSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-minsize


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: recurrence

      ``AWS::AutoScaling::ScheduledAction.Recurrence``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-recurrence


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: startTime

      ``AWS::AutoScaling::ScheduledAction.StartTime``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-as-scheduledaction.html#cfn-as-scheduledaction-starttime


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-autoscaling

